2003-10-10  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.MonoGenericParam): Added `index' field.
	(TypeBuilder.DefineGenericParameter): Added overloaded version
	taking an `int index' argument for generic methods.

2003-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs (CreateType): Fire TypeResolve events for unfinished 
	nested value types. Fixes #47022.

2003-09-29  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs: Really fix #48695.

Sat Sep 27 16:17:08 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* ILGenerator.cs: instance fields are loaded from this.

2003-09-26  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs (DefineDefaultConstructor): Make this work on types
	without a parent. Fixes #48695.

2003-09-17  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.CreateType): Don't append the type
	parameters to the type name; ie. use `Stack' instead of `Stack<T>'.

2003-09-06  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.IsUnboundGenericParameter): Implemented.

2003-09-04  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.MonoGenericParam): Make this nested
	class internal, not protected.

2003-08-29  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.DefineGenericParameter): New public
	method.  We can now create generic types.
	(TypeBuilder.GetGenericTypeDefinition): Override this; call the
	`setup_internal_class' interncall before calling our base impl.

Sat Aug  2 13:04:55 BST 2003 Malte Hildingson <malte@amy.udd.htu.se>

	* ILGenerator.cs: Emission of doubles now utilise the Double.AssertEndianity
	icall to assert double word endianity on ARM.

2003-07-25  Duncan Mak  <duncan@ximian.com>

	* OpCodes.cs (Boxval): Marked with ObsoleteAttribute.

2003-07-24  Miguel de Icaza  <miguel@ximian.com>

	* TypeBuilder.cs: Added generics stubs.

	* EnumBuilder.cs: Added generics  stubs, changed bracing style for
	routines.
